Cleanup completed todos link

--- a/todo-app/index.html
+++ b/todo-app/index.html
@@ -99,7 +99,10 @@
       Todo:
       <span id="todo-count">1</span> • Done:
       <span id="completed-count">0</span> • Total:
-      <span id="total-count">1</span>
+      <span id="total-count">1</span> •
+    
+      <!-- link to clean up todos that are done -->
+      <a href="#" onclick="cleanUpDoneTodos(); return false">Clean up</a>
     </div>
   </div>
 
@@ -172,7 +175,7 @@
       function nextTodoId() {
         return document.getElementsByClassName("todo").length + 1;
       }
-      
+
       var inputField = document.getElementById("new-todo");
       var newTodoTitle = inputField.value;
       createTodo(newTodoTitle);
@@ -180,9 +183,20 @@
       // reset the value of the inputField to make it empty and
       // ready to create new todos
       inputField.value = null;
-
       updateCounters();
     }
+
+    function cleanUpDoneTodos() {
+        var list = document.getElementById("todolist");
+        var doneItems = document.getElementsByClassName("completed");
+
+        // Reverse loop through the done todo items so we can remove them without changing the index of the remaining items when we remove them
+        for (var i = doneItems.length; i > 0; i--) {
+          list.removeChild(doneItems[i - 1]);
+        }
+
+        //   updateCounters();
+      }
 </script>
 
 </body>
