--- a/todo-jquery/index.html
+++ b/todo-jquery/index.html
@@ -103,6 +103,7 @@
     </div>
   </div>
 
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
   <script>
   	// JavaScript here...
   </script>
