--- a/todo-jquery/index.html
+++ b/todo-jquery/index.html
@@ -105,7 +105,7 @@
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
   <script>
-  	// JavaScript here...
+  	$("#total-count").html($(".todo").length);
   </script>
 </body>
 
