--- a/todo-jquery/index.html
+++ b/todo-jquery/index.html
@@ -105,7 +105,17 @@
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
   <script>
-  	$("#total-count").html($(".todo").length);
+  	function updateCounters() {
+        var todoCount = $(".todo").length;
+        var completedCount = $(".completed").length;
+
+        $("#total-count").html(todoCount);
+        $("#completed-count").html(completedCount);
+        $("#todo-count").html(todoCount - completedCount);
+      }
+
+      updateCounters();
+    }
   </script>
 </body>
 
